--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
                 </p>
                 <picture>
                     <source media="(min-width: 1024px)" srcset="majorca-waves-L" >
-                    <source media="(max-width: 780px)" srcset="majorca-waves-M" >
-                    <source media="(max-width: 320px)" srcset="majorca-waves-S" >
+                    <source media="(max-width: 780px)" srcset="majorca-waves-L" >
+                    <source media="(max-width: 320px)" srcset="majorca-waves-L" >
                     <img src="majorca-waves-L.png" alt="Majorca, Spain" >
                    </picture>
 
                    <picture>
                     <source media="(min-width: 1024px)" srcset="majorca-beach-L" >
-                    <source media="(max-width: 780px)" srcset="majorca-beach-M" >
-                    <source media="(max-width: 320px)" srcset="majorca-beach-S" >
+                    <source media="(max-width: 780px)" srcset="majorca-beach-L" >
+                    <source media="(max-width: 320px)" srcset="majorca-beach-L" >
                     <img src="majorca-beach-L.png" alt="Majorca Beach, Spain" >
                    </picture>
 
                    <picture>
                     <source media="(min-width: 1024px)" srcset="majorca-cove-L" >
-                    <source media="(max-width: 780px)" srcset="majorca-cove-M" >
-                    <source media="(max-width: 320px)" srcset="majorca-cove-S" >
+                    <source media="(max-width: 780px)" srcset="majorca-cove-L" >
+                    <source media="(max-width: 320px)" srcset="majorca-cove-L" >
                     <img src="majorca-cove-L.png" alt="Majorca Cove, Spain" >
                 </picture>
 
