--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
                    The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.
                 </p>
                 <picture>
-                    <source media="(min-width: 1024px)" srcset="majorca-waves-L" >
-                    <source media="(max-width: 780px)" srcset="majorca-waves-M" >
-                    <source media="(max-width: 320px)" srcset="majorca-waves-S" >
+                    <source media="(min-width: 1024px)" srcset="majorca-waves-L.png" >
+                    <source media="(max-width: 780px)" srcset="majorca-waves-M.png" >
+                    <source media="(max-width: 320px)" srcset="majorca-waves-S.png" >
                     <img src="majorca-waves-L.png" alt="Majorca, Spain" >
                    </picture>
 
                    <picture>
-                    <source media="(min-width: 1024px)" srcset="majorca-beach-L" >
-                    <source media="(max-width: 780px)" srcset="majorca-beach-M" >
-                    <source media="(max-width: 320px)" srcset="majorca-beach-S" >
+                    <source media="(min-width: 1024px)" srcset="majorca-beach-L.png" >
+                    <source media="(max-width: 780px)" srcset="majorca-beach-M.png" >
+                    <source media="(max-width: 320px)" srcset="majorca-beach-S.png" >
                     <img src="majorca-beach-L.png" alt="Majorca Beach, Spain" >
                    </picture>
 
                    <picture>
-                    <source media="(min-width: 1024px)" srcset="majorca-cove-L" >
-                    <source media="(max-width: 780px)" srcset="majorca-cove-M" >
-                    <source media="(max-width: 320px)" srcset="majorca-cove-S" >
+                    <source media="(min-width: 1024px)" srcset="majorca-cove-L.png" >
+                    <source media="(max-width: 780px)" srcset="majorca-cove-M.png" >
+                    <source media="(max-width: 320px)" srcset="majorca-cove-S.png" >
                     <img src="majorca-cove-L.png" alt="Majorca Cove, Spain" >
                 </picture>
 
