--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 	<a href="#main-content" id="skipLink">Skip to main</a>
 	<header>
 		<h1>Wunderlust Travel</h1>
+		<picture>
+            <source media="(min-width: 1024px)" srcset="logo-L.png" >
+            <source media="(max-width: 780px)" srcset="logo-M.png" >
+            <source media="(max-width: 320px)" srcset="logo-S.png" >
+            <img src="logo-L.png" alt="Logo for website" >
+           </picture>
         <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
 		<nav>
 			<ul>
