--- a/index.html
+++ b/index.html
@@ -104,6 +104,17 @@
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <polyline points="9 6 15 12 9 18" />
                   </svg>
+
+			  <h3>Testimonials</h3>
+                <p>Miranda Blake</p>
+                <picture>
+                    <source media="(min-width: 1024px)" srcset="miranda-blake-L.png" >
+                    <source media="(max-width: 780px)" srcset="miranda-blake-M.png" >
+                    <source media="(max-width: 320px)" srcset="miranda-blake-S.png" >
+                    <img src="miranda-blake-L.png" alt="Photo of Miranda Blake" >
+                </picture>
+                <p>Traveling from London, England</p>
+                <p>"I traveled here for business, but my stay was extended. Now it is my home."</p>
                   
 
                 
