--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                 <p>Traveling from Berlin, Germany</p>
                 <p>"Great escape from my reality. Beautiful sunsets, wonderful people, great beer."</p>
 
-                <p>Ines Villegos</p>
+                <p>Ines Villegoes</p>
                 <picture>
-                    <source media="(min-width: 1024px)" srcset="ines-villegos-L.png" >
-                    <source media="(max-width: 780px)" srcset="ines-villegos-M.png" >
-                    <source media="(max-width: 320px)" srcset="ines-villegos-S.png" >
+                    <source media="(min-width: 1024px)" srcset="ines-villegoes-L.png" >
+                    <source media="(max-width: 780px)" srcset="ines-villegoes-M.png" >
+                    <source media="(max-width: 320px)" srcset="ines-villegoes-S.png" >
                     <img src="ines-villegoes-L.png" alt="Photo of Ines Villegos" >
                 </picture>
                 <p>Traveling from Barcelona, Spain</p>
