--- a/index.html
+++ b/index.html
@@ -184,6 +184,14 @@
                     <path d="M21 21v-2a4 4 0 0 0 -3 -3.85" />
                     </svg>
                 <p>Population: 923,608</p>
+
+                <h3>Contact Us</h3>
+                <form> 
+                    <label for="fname">First Name<span class="required">*</span></label><input id="fname" type="text" />
+                    <label for="lname">Last Name<span class="required"></span></label><input id="lname" type="text" />
+                    <label for="email">Email<span class="required">*</span></label><input id="email" type="email" />
+                    <label for="phone">Phone<span class="required">*</span></label><input id="phone" type="number" />
+                </form>
                   
                   
 
