--- a/index.html
+++ b/index.html
@@ -188,9 +188,14 @@
                 <h3>Contact Us</h3>
                 <form> 
                     <label for="fname">First Name<span class="required">*</span></label><input id="fname" type="text" />
-                    <label for="lname">Last Name<span class="required"></span></label><input id="lname" type="text" />
+
+                    <label for="lname">Last Name<span class="required">*</span></label><input id="lname" type="text" />
+                  <fieldset>
+                    <legend>Contact Method</legend>
                     <label for="email">Email<span class="required">*</span></label><input id="email" type="email" />
+
                     <label for="phone">Phone<span class="required">*</span></label><input id="phone" type="number" />
+                  </fieldset>
                 </form>
                   
                   
