--- a/index.html
+++ b/index.html
@@ -196,6 +196,27 @@
 
                     <label for="phone">Phone<span class="required">*</span></label><input id="phone" type="number" />
                   </fieldset>
+
+                  <label for="destination">Destination</label>
+                  <select name="destination" id="destination">
+                    <option value="Barcelona"></option>
+                    <option value="Granada"></option>
+                    <option value="Ibiza"></option>
+                    <option value="Madrid"></option>
+                    <option value="Majorca"></option>
+                    <option value="Seville"></option>
+                    <option value="Tenerife"></option>
+                    <option value="Valencia"></option>
+                  </select>
+
+                  <label for="seasons">Travel Time</label>
+                  <select name="seasons" id="seasons">
+                    <option value="Fall"></option>
+                    <option value="Winter"></option>
+                    <option value="Spring"></option>
+                    <option value="Summer"></option>
+                    <option value="Flexible"></option>
+                  </select>
                 </form>
                   
                   
