--- a/index.html
+++ b/index.html
@@ -199,23 +199,23 @@
 
                   <label for="destination">Destination</label>
                   <select name="destination" id="destination">
-                    <option value="Barcelona"></option>
-                    <option value="Granada"></option>
-                    <option value="Ibiza"></option>
-                    <option value="Madrid"></option>
-                    <option value="Majorca"></option>
-                    <option value="Seville"></option>
-                    <option value="Tenerife"></option>
-                    <option value="Valencia"></option>
+                    <option value="Barcelona">Barcelona</option>
+                    <option value="Granada">Granada</option>
+                    <option value="Ibiza">Ibiza</option>
+                    <option value="Madrid">Madrid</option>
+                    <option value="Majorca">Majorca</option>
+                    <option value="Seville">Seville</option>
+                    <option value="Tenerife">Tenerife</option>
+                    <option value="Valencia">Valencia</option>
                   </select>
 
                   <label for="seasons">Travel Time</label>
                   <select name="seasons" id="seasons">
-                    <option value="Fall"></option>
-                    <option value="Winter"></option>
-                    <option value="Spring"></option>
-                    <option value="Summer"></option>
-                    <option value="Flexible"></option>
+                    <option value="Fall">Fall</option>
+                    <option value="Winter">Winter</option>
+                    <option value="Spring">Spring</option>
+                    <option value="Summer">Summer</option>
+                    <option value="Flexible">Flexible</option>
                   </select>
                 </form>
                   
