--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<a href="#main-content" id="skipLink">Skip to main</a>
+	<a href="contact" id=skipLink2">Skip to Contact form</a>
 	<header>
 		<h1>Wunderlust Travel</h1>
         <picture>
