--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <p>Population: 923,608</p>
 
                 <h3>Contact Us</h3>
-                <form> 
+                <form id="contact"> 
                     <label for="fname">First Name<span class="required">*</span></label><input id="fname" type="text">
 
                     <label for="lname">Last Name<span class="required">*</span></label><input id="lname" type="text">
