--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 	<a href="#main-content" id="skipLink">Skip to main</a>
-	<a href="contact" id=skipLink2">Skip to Contact form</a>
 	<header>
 		<h1>Wunderlust Travel</h1>
         <picture>
@@ -22,7 +21,7 @@
 				<li><a href="#">Destinations</a></li>
 				<li><a href="#">Inspirations</a></li>
 				<li><a href="#">Special</a></li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="contact">Contact Us</a></li>
 			</ul>
 		</nav>
 	</header>
