--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<li><a href="#">Destinations</a></li>
 				<li><a href="#">Inspirations</a></li>
 				<li><a href="#">Special</a></li>
-				<li><a href="contact">Contact Us</a></li>
+				<li><a href="#contact">Contact Us</a></li>
 			</ul>
 		</nav>
 	</header>
