--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<li><a href="#">Destinations</a></li>
 				<li><a href="#">Inspirations</a></li>
 				<li><a href="#">Special</a></li>
-				<li><a href="#contact">Contact Us</a></li>
+				<li><a href="#contact-us">Contact Us</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -186,7 +186,7 @@
                 <p>Population: 923,608</p>
 
                 <h3>Contact Us</h3>
-                <form id="contact"> 
+                <form id="contact-us"> 
                     <label for="fname">First Name<span class="required">*</span></label><input id="fname" type="text">
 
                     <label for="lname">Last Name<span class="required">*</span></label><input id="lname" type="text">
