--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </picture>
 
             <h3>Plan Your Trip</h3>
-                <p>How to Get There</p>
+                <h4>How to Get There</h4>
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plane" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M16 10h4a2 2 0 0 1 0 4h-4l-4 7h-3l2 -7h-4l-2 2h-3l2 -4l-2 -4h3l2 2h4l-2 -7h3z" />
@@ -65,7 +65,7 @@
                     <polyline points="9 6 15 12 9 18" />
                     </svg>
 
-                <p>Places to Stay</p>
+                <h4>Places to Stay</h4>
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bed" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M3 7v11m0 -4h18m0 4v-8a2 2 0 0 0 -2 -2h-8v6" />
@@ -78,7 +78,7 @@
                     <polyline points="9 6 15 12 9 18" />
                     </svg>
                 
-                <p>Things to Do</p>
+                <h4>Things to Do</h4>
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-sailboat" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M2 20a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1" />
@@ -93,7 +93,7 @@
                     <polyline points="9 6 15 12 9 18" />
                     </svg>
 
-                <p>Where to Eat</p>
+                <h4>Where to Eat</h4>
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen-2" width="150" height="150" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M19 3v12h-5c-.023 -3.681 .184 -7.406 5 -12zm0 12v6h-1v-3m-10 -14v17m-3 -17v3a3 3 0 1 0 6 0v-3" />
@@ -106,7 +106,7 @@
                   </svg>
 
             <h3>Testimonials</h3>
-                <p>Miranda Blake</p>
+                <h4>Miranda Blake</h4>
                 <picture>
                     <source media="(min-width: 1024px)" srcset="miranda-blake-L.png" >
                     <source media="(max-width: 780px)" srcset="miranda-blake-M.png" >
@@ -116,7 +116,7 @@
                 <p>Traveling from London, England</p>
                 <p>"I traveled here for business, but my stay was extended. Now it is my home."</p>
 
-                <p>Max Winter</p>
+                <h4>Max Winter</h4>
                 <picture>
                     <source media="(min-width: 1024px)" srcset="max-winter-L.png" >
                     <source media="(max-width: 780px)" srcset="max-winter-M.png" >
@@ -126,7 +126,7 @@
                 <p>Traveling from Berlin, Germany</p>
                 <p>"Great escape from my reality. Beautiful sunsets, wonderful people, great beer."</p>
 
-                <p>Ines Villegos</p>
+                <h4>Ines Villegos</h4>
                 <picture>
                     <source media="(min-width: 1024px)" srcset="ines-villegoes-L.png" >
                     <source media="(max-width: 780px)" srcset="ines-villegoes-M.png" >
@@ -136,7 +136,7 @@
                 <p>Traveling from Barcelona, Spain</p>
                 <p>"A very safe environment for all travelers."</p>
 
-                <p>Carmen Lorenzo</p>
+                <h4>Carmen Lorenzo</h4>
                 <picture>
                     <source media="(min-width: 1024px)" srcset="carmen-lorenzo-L.png" >
                     <source media="(max-width: 780px)" srcset="carmen-lorenzo-M.png" >
@@ -147,7 +147,7 @@
                 <p>“Live, laugh, love-- everything you need in Majorca.”</p>
 
             <h3>About your Destination</h3>
-                <p>Size</p>
+                <h4>Size</h4>
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-ruler-2" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M17 3l4 4l-14 14l-4 -4z" />
@@ -158,7 +158,7 @@
                     </svg>
                 <p>Size: 1,405 miles squared</p>
 
-                <p>Elevation</p>
+                <h4>Elevation</h4>
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-top-bar" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <line x1="12" y1="21" x2="12" y2="3" />
@@ -167,7 +167,7 @@
                     </svg>
                 <p>Elevation: 4,741 feet</p>
 
-                <p>Location</p>
+                <h4>Location</h4>
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <circle cx="12" cy="11" r="3" />
@@ -175,7 +175,7 @@
                     </svg>
                 <p>Location: Mediterranean</p>
                 
-                <p>Population</p>
+                <h4>Population</h4>
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <circle cx="9" cy="7" r="4" />
