--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <img src="miranda-blake-L.png" alt="Photo of Miranda Blake" >
                 </picture>
                 <p>Traveling from London, England</p>
-                <p>"I traveled here for business, but my stay was extended. Now it is my home."</p>
+                <q>"I traveled here for business, but my stay was extended. Now it is my home."</q>
 
                 <h4>Max Winter</h4>
                 <picture>
@@ -124,7 +124,7 @@
                     <img src="max-winter-L.png" alt="Photo of Max Winter" >
                 </picture>
                 <p>Traveling from Berlin, Germany</p>
-                <p>"Great escape from my reality. Beautiful sunsets, wonderful people, great beer."</p>
+                <q>"Great escape from my reality. Beautiful sunsets, wonderful people, great beer."</q>
 
                 <h4>Ines Villegos</h4>
                 <picture>
@@ -134,7 +134,7 @@
                     <img src="ines-villegoes-L.png" alt="Photo of Ines Villegeos" >
                 </picture>
                 <p>Traveling from Barcelona, Spain</p>
-                <p>"A very safe environment for all travelers."</p>
+                <q>"A very safe environment for all travelers."</q>
 
                 <h4>Carmen Lorenzo</h4>
                 <picture>
@@ -144,7 +144,7 @@
                     <img src="carmen-lorenzo-L.png" alt="Photo of Carmen Lorenzo" >
                 </picture>
                 <p>Traveling from Madrid, Spain</p>
-                <p>“Live, laugh, love-- everything you need in Majorca.”</p>
+                <q>“Live, laugh, love-- everything you need in Majorca.”</q>
 
             <h3>About your Destination</h3>
                 <h4>Size</h4>
