--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <meta property="og:url" content="https://wunderlusttravel.com/majorca">
         <meta property="og:description" content="Let Wunderlust Travel take you to beautiful Majorca this year! Majorca is a beautiful island and offers beauty and fun to its visitors">
         <!-- ~~~~~~~~~~FAVICON ~~~~~~~~~~ -->
-        <link rel="shortcut icon" href="images/favicon.png">
+        <link rel="shortcut icon" href="favicon.png">
 
         <!-- ~~~~~~~~~~ GOOGLE FONTS ~~~~~~~~~~ -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
